--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -5,3 +5,13 @@
     padding: 0;
     font-family: 'poppins','sans-serif';
 }
+
+body{
+    background: linear-gradient(to right,#f6490f,#f27813,#ef9614);
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100vw;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
