syling the score

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -28,3 +28,14 @@ body{
     border-radius: 8px;
     text-align: center;
 }
+
+.score{
+    font-size: large;
+    font-weight: bold;
+}
+#user-score{
+    color: #ef9614;
+}
+#total-score{
+    color: #f6490f;
+}
